Update note component state param to status

--- a/components.json
+++ b/components.json
@@ -614,7 +614,7 @@
         {
           "type": "note",
           "text": "Only the driver can cancel this rental.",
-          "state": "error"
+          "status": "error"
         }
       ]
     },
